# kingsgg_ocr

demo_page/: css.txt  page1.html  script.js
my_web_ocr/: server.js
my_web_ocr/public/: script.txt
py_ocr/: app.py  client.py  demo.py  tips.txt
sign_in/: Cargo.toml
sign_in/sign_in_page/: ngix.txt  server.js
sign_in/sign_in_page/public/: login.html  ocr.html  register.html  script.js
sign_in/src/: main.rs  main_with_mysql.rs
