[package]
name = "sign_in"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
bcrypt = "0.10"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
log = "0.4.21"
env_logger = "0.11.3"
postgres="*"
bb8-postgres = "0.7.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "main_with_mysql"
path = "src/main_with_mysql.rs"